fix: ensure correct sizing on mobile screens

--- a/apps/web/src/app.css
+++ b/apps/web/src/app.css
@@ -36,6 +36,10 @@ html {
     scroll-timeline: --bodyTimeline vertical;
 }
 
+body {
+    overflow: clip;
+}
+
 .wrapper {
     inline-size: 100%;
 }
